# Backend-Test-Monter

./: .env  .env.sample  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  pre-commit.yml
backend_test/: celery.py  settings.py  urls.py
backend_test/meals/: apps.py  models.py  serializers.py  urls.py  views.py
backend_test/meals/migrations/: 0001_initial.py  0002_remove_menumeal_available_on.py  0003_alter_menumeal_unique_together.py
backend_test/meals/templates/meals/: meal_detail.html  meal_list.html  menu_detail.html  menu_list.html
backend_test/meals/templates/menu/: detail.html
backend_test/meals/tests/: test_models.py  test_views.py
backend_test/notifications/: slack.py
backend_test/notifications/slack_templates/: new_menu_message.py
backend_test/orders/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend_test/orders/migrations/: 0001_initial.py  0002_auto_20210506_0109.py
backend_test/orders/templates/orders/: order_detail.html  order_form.html  order_list.html
backend_test/orders/tests/: test_models.py  test_views.py
backend_test/users/: apps.py  employee_reminder.py  models.py  urls.py  views.py
backend_test/users/migrations/: 0001_initial.py  0002_employee_slack_user_id.py
backend_test/users/templates/users/: employee_detail.html  employee_form.html  employee_list.html  employee_update_form.html
backend_test/users/tests/: test_employee_reminder.py  test_models.py  test_views.py
